includes suggestions to response given by Vince

--- a/response/main.tex
+++ b/response/main.tex
@@ -17,18 +17,27 @@ We would like to open this response by thanking the reviewers for their
 thoughtful comments and suggestions. We have fully taken their comments on board
 and made significant modifications to both the mathematical arguments and the narrative. We feel this has greatly improved the work.
 
-The main modifications include the improvement of the theorems' proofs and the
-generalisation of our results regardless the PD payoff matrix. Moreover, we
-included more details of our methodology, such as the mathematical explanation
-of the SSE method, and a discussion based on the results of Hilbe et al from
-``Partners and rivals in direct reciprocity'' (Nature Human Behaviour, 2018).
-Finally, following the suggestions of Reviewer 2 we improved the narrative of
-the manuscript which involved changing the title of the manuscript to 
-``Best response memory-one strategies with a theory of mind: the limitations
-of extortion and restricted memory''.
+Both reviewers commented on different aspects of the paper and so our modifications
+naturally fit in to two categories (which we will discuss in detail comment by comment):
 
-We hope that our manuscript will be considered for publication following our
-modifications.
+\begin{itemize}
+    \item The first is an improvement of the theoretic results both in terms of
+    their proofs but also the result themselves. For example, we omitted to
+    include a detail about the derivative of quadratic form in one of our proofs
+    and also had only given that quadratic form for the specific case of \((R,
+    P, T, S)=(3, 0, 5, 1)\). The reviewer was very right to point out issues
+    like this and we have addressed them all.
+    \item The second reviewer questioned the general narrative of the paper as
+    well as the evolutionary work. This was very helpful and we took time to
+    reflect on the narrative of the paper. As a result of this we have changed
+    the title to ``A theory of mind: Best responses to memory-one strategies.
+    The limitations of extortion and restricted memory'' and reorganised some of
+    the content. We have also clarified the nature of the evolutionary process
+    we're discussing.
+\end{itemize}
+
+We will now take each comment of the reviewers in turn and highlight our efforts
+made to improve the work.
 
 \section{Response}
 
@@ -38,8 +47,9 @@ modifications.
      ``Theorem 2: First, it is not clear how equation 17 is obtained.''
 \end{verbatim}
 
-We have added further details on how to obtain the equation in the proof of Theorem 2
-(in the current version Theorem 1).
+This comment points out that we had skipped a step in obtaining the dot product
+of the state vector \(v\) and the payoff matrix \((R, S, T, P)\).
+This has been added in the proof of what used to be Theorem 2 but is now Theorem 1.
 
 \begin{verbatim}
     ``Theorem 2: Moreover, even if that's correct, it is only for a
@@ -58,7 +68,8 @@ result and whilst we were worried that this closed form could be very messy it i
     (22) - (24), the key results of the Theorem''
 \end{verbatim}
 
-We have addressed this comment by making additions to the proof.
+We have added a sentence clarifying that this is obtained by taking the average
+over the opponents of the previously obtained expression for the utility.
 
 \begin{verbatim}
      ``Theorem 3: and what was stated in (5)''
