addresses final comment on response

--- a/response/main.tex
+++ b/response/main.tex
@@ -68,15 +68,17 @@ result and whilst we were worried that this closed form could be very messy it i
     (22) - (24), the key results of the Theorem''
 \end{verbatim}
 
-We have added a sentence clarifying that this is obtained by taking the average
-over the opponents of the previously obtained expression for the utility.
+Equations (22) - (24) relay on the derivative of the utility \(\sum\limits_{i=1}
+^ N  u_q^{(i)}(p)\) which is a sum of quadratic form ratios. The derivative is
+obtained by using the property \(\frac{d x A x^T}{dx} =  2Ax\). We have added
+these details on the proof.
 
 \begin{verbatim}
      ``Theorem 3: and what was stated in (5)''
 \end{verbatim}
 
-We have addressed this comment by specifying that it is an algebraic manipulation
-following equation (4).
+We have added a sentence clarifying that this is obtained by taking the average
+over the opponents of the previously obtained expression for the utility.
 
 \textbf{Regarding the comments of Reviewer 2:}
 
@@ -135,9 +137,10 @@ We thank the reviewer for their article recommendation. The findings of Hilbe et
 \end{verbatim}
 
 Thank you for this comment which encouraged us to reflect on the narrative of the
-paper, as a result we have modified the title of the manuscript and the titles
+paper. As a result we have modified the title of the manuscript and the titles
 of the sections. Moreover, the results of Section 1.2 have been to the Appendix,
 and the Theorem 1 (old version Theorem 2) has been moved in the main body.
+We feel that these changes improved our manuscript significantly.
 
 \begin{verbatim}
     ``The figures should be larger, such that the labels are easier to read''
