Submit to nature address reviewers (#56)
* revisit and add to proofs

* rename sections and remove stability of defection

* remove sentence about sustainability from main tex

Find the right place for the sentence

* add to sse

* include theorem one in main tex

* generalise utility and improve proofs as pointed out by reviewer 1

* finalises methods section

* working on results

* use `with self interactions` instead of evolutionary dynamics

* run numerical experiments notebook

* fixes title and introduction

* fixes methos section

* fixes results section

* fixes conclusion

* minor tweaks

* include reply to the reviewers

* fixes error in algorithm

* adds diff.pdf

* adds to explanation of the average utility form

Co-Authored-By: Vince Knight <vincent.knight@gmail.com>

* fixes broken maths in algorithm

Co-Authored-By: Vince Knight <vincent.knight@gmail.com>

* fixes title

Co-Authored-By: Vince Knight <vincent.knight@gmail.com>

* add to TODO

Co-Authored-By: Vince Knight <vincent.knight@gmail.com>

* re wording

Co-Authored-By: Vince Knight <vincent.knight@gmail.com>

* Update response/main.tex

Co-Authored-By: Vince Knight <vincent.knight@gmail.com>

* Update response/main.tex

Co-Authored-By: Vince Knight <vincent.knight@gmail.com>

* adds TODO

Co-Authored-By: Vince Knight <vincent.knight@gmail.com>

* adds TODO

Co-Authored-By: Vince Knight <vincent.knight@gmail.com>

* Update response/main.tex

Co-Authored-By: Vince Knight <vincent.knight@gmail.com>

* tweaks abstract to fit results

The current sentence is inline with our results. But could potentially
be changed after Vince writes the self interactions results

* sell theory of mind sentence

* move values of RSTP for numerical experiments earlier in the intro

* highlight that the numerical experiments complement the analytical results

* adds a sentence for the closed form results to intro

* adds todo

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -504,3 +504,22 @@ author = "Matsui, Akihiko",
   year={2013},
   publisher={National Acad Sciences}
 }
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%DERIVATIVE%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+@book{Abadir2005,
+  title={Matrix algebra},
+  author={Abadir, Karim M and Magnus, Jan R},
+  volume={1},
+  year={2005},
+  publisher={Cambridge University Press}
+}
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+@article{Hilbe2018,
+  title={Partners and rivals in direct reciprocity},
+  author={Hilbe, Christian and Chatterjee, Krishnendu and Nowak, Martin A},
+  journal={Nature human behaviour},
+  volume={2},
+  number={7},
+  pages={469--477},
+  year={2018},
+  publisher={Nature Publishing Group}
+}
