Modify paragraph on Hilbe's paper

--- a/main.tex
+++ b/main.tex
@@ -422,18 +422,13 @@ to fight back when being exploited. In~\cite{Hilbe2018} it is shown that partner
 selected in evolutionary settings when populations are large and relationships
 stable and they allow for the evolution of cooperation.
 
-A best response memory-one strategy
-in evolutionary settings has not been incorporated in the study of this manuscript, however,
-the best response memory-one strategy with self interactions can used to approximate % TODO Vince to work on this a bit
-the behaviour of a evolutionary stable best response memory-one strategy.
-The distribution of SSE for the best response strategy that includes self
-interactions is skewed to the left, however, a positive measure
-of skewness and kurtosis indicate a heavy tail to the right. Thus, the best
-response memory-one strategy when considering self interactions is
-no behaving uniformly extortionately either. This indicates that evolutionary
-stable memory-one strategies need to more adaptable than a ZDs, and aim for
-mutual cooperation as well as exploitation which is line with the results of
-\cite{Hilbe2018}.
+When considering self interactions, the distribution of SSE for the best
+response strategy has skewness and kurtosis that indicate a heavy tail to the
+right. This indicates that evolutionary stable memory-one strategies need to
+more adaptable than a ZDs, and aim for mutual cooperation as well as
+exploitation which is in line with the results of \cite{Hilbe2018} where their
+strategy was designed to adapt and was shown to be evolutionary stable. The
+findings of this work show that an optimal strategy acts in the same way.
 
 The difference between best responses in tournaments without and with self interactions
 is further explored by Fig.~\ref{fig:behaviour_violin_plots}.
