Update response to clarify evolutionary setting.
This is still inline with b349ef4

--- a/response/main.tex
+++ b/response/main.tex
@@ -3,12 +3,12 @@
 \setlength\parindent{0pt}
 \setlength{\parskip}{1em}
 \usepackage{authblk}
- 
+
 \title{Stability of defection, optimisation of strategies and the limits of
 memory in the Prisoner's Dilemma RESPONSE TO REVIEWS}
 
 \author{Nikoleta E. Glynatsi, Vincent A. Knight}
- 
+
 \begin{document}
 
 \maketitle
@@ -60,7 +60,7 @@ This has been added in the proof of what used to be Theorem 2 but is now Theorem
 
 We agree with the comment of the reviewer. The utility was
 specific only for a given payoff matrix. We have generalised our result by
-considering the generalised payoffs \((R, S, T, P)\) and feel that not only is this a more useful 
+considering the generalised payoffs \((R, S, T, P)\) and feel that not only is this a more useful
 result and whilst we were worried that this closed form could be very messy it is in fact relatively elegant.
 
 \begin{verbatim}
@@ -72,7 +72,6 @@ Equations (22) - (24) relay on the derivative of the utility \(\sum\limits_{i=1}
 ^ N  u_q^{(i)}(p)\) which is a sum of quadratic form ratios. The derivative is
 obtained by using the property \(\frac{d x A x^T}{dx} =  2Ax\). We have added
 these details on the proof.
-
 \begin{verbatim}
      ``Theorem 3: and what was stated in (5)''
 \end{verbatim}
@@ -94,12 +93,13 @@ over the opponents of the previously obtained expression for the utility.
     extortionate. ''
 \end{verbatim}
 
-We agree with the comment of the reviewer. We are not running a evolutionary % TODO Vince to modify
-tournament and now understand that our wording was misleading. We study best
+We agree with the comment of the reviewer. We are not running a evolutionary
+process. We study best
 response memory-one strategies that include self interactions which in a sense are
 approximating evolutionary stable best response strategies. We have reworded
-the analysis of best response memory-one strategies that include self interactions
-and it's results.
+this part of the work to clarify that we are only considering the possibility of
+include self interactions and it's results. We also explain how this could be
+used in a Moran process setting.
 
 \begin{verbatim}
     ``Another related problem is that the authors don't go into more detail about
