Reword pointer to reference.

--- a/main.tex
+++ b/main.tex
@@ -917,7 +917,7 @@ For \(\frac{d}{dp} \sum\limits_{i=1} ^ N  u_q(p)\) to equal zero then:
     \end{equation*}}
 
     The derivative of \(\sum\limits_{i=1} ^ N  u_q^{(i)}(p)\) calculated using
-    the following property (proved in~\cite{Abadir2005}):
+    the following property (see~\cite{Abadir2005} for details):
 
     \begin{equation}\label{eq:first_derivative_property}
     \frac{d x A x^T}{dx} =  2Ax.
