Make minor amendments suggested by Nik.

--- a/main.tex
+++ b/main.tex
@@ -61,8 +61,9 @@ of extortion and restricted memory.}
     against single opponents. This manuscript investigates a theory of mind: \textit{best
     response} memory-one strategies, as a multidimensional
     optimisation problem. We add to the literature that has shown that
-    extortionate play is not always optimal by showing that optimal play is in
-    fact rarely extortionate. We
+    extortionate play is not always optimal by showing that optimal play is
+    often not extortionate.
+    We
     also provide evidence that memory-one strategies suffer from their limited
     memory in multi agent interactions and can be out performed by
     optimised strategies with longer memory.
@@ -245,9 +246,6 @@ and restricted memory.
 
 \section{Results}\label{section:results}
 
-ZDs are evidence that extortion works
-in pairwise interactions, their behaviour ensures that the strategies will never
-lose a game.
 Here we define \textit{memory-one best response}
 strategies as a multi dimensional optimisation problem given by:
 
@@ -512,13 +510,13 @@ shorter memory is limiting.
 
 \section{Discussion}
 This manuscript has considered \textit{best response} strategies in the IPD game, and
-more specifically, \textit{memory-one best responses}.
+more specifically, \textit{memory-one best responses}. It has proven that:
 
 \begin{itemize}
-    \item It has proven that the utility
+    \item The utility
           of a memory-one strategy against a set of memory-one opponents can be written as a sum
           of ratios of quadratic forms (Theorem~\ref{theorem_one}).
-    \item  There is a compact way of identifying a memory-one best response to a
+    \item There is a compact way of identifying a memory-one best response to a
         group of opponents through a search over a discrete set
         (Theorem~\ref{memone_group_best_response}).
 \end{itemize}
